<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/appBackground"
    tools:context="c371g2.ltc_safety.a_main.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">
        <LinearLayout
            android:background="@drawable/section_border"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="1dp">
            <Button
                android:background="@android:color/white"
                android:textColor="@color/colorPrimary"
                android:text="@string/new_concern_text"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:id="@+id/main_newConcernButton" />
        </LinearLayout>
    </LinearLayout>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/main_concernListView"
        android:background="@android:color/white"/>

</LinearLayout>

