...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/detailedConcern_retractButtonContainer"
            android:background="@drawable/section_border"
            android:padding="1dp">
            <Button
                android:id="@+id/detailedConcern_retractButton"
                android:background="@android:color/white"
                android:text="Retract"
                android:textColor="@android:color/holo_red_dark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
...
